[project]
name = "aula09-bootcamp"
version = "0.1.0"
description = ""
authors = [
    {name = "Thales Fernandes",email = "contato.thales@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.5,<=3.11.5"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
